Fixed alignment issues

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.css
@@ -67,7 +67,7 @@
 }
 
 .btn.btn-primary.launchbar-button{
-  margin-left: 15px;
+  width: 100%
 }
 
 .launch-user-caret {
@@ -77,7 +77,7 @@
 }
 
 .launchbar-username {
-  margin-left: 20px;
+  text-align: center;
 }
 
 .launchbar-seperator {
